# hatshufflepy

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.ubuntu  LICENSE  MANIFEST.in  README.md  build_depends.sh  clean.sh  crs.py  decrypt.py  demo.py  install_depends.sh  prove.py  setup.py  temp.py  verify.py
demos/: crs.py  demo.py  demo_protocol.py  encrypt.py  generate_votes.py  keys.py  voting.py
env/: pip-selfcheck.json
env/local/: bin  include  lib
hatshufflepy/: hatshufflepy.cpp  hatshufflepy.pxd  hatshufflepy.pyx
hatshufflepy/libhatshuffle_changes/libhatshuffle/: CMakeLists.txt
libhatshuffle_changes/: CMakeLists.txt
